tests/machine/x/cobol/min_max_builtin.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MIN-MAX-BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 NUMS.
           05 E1 PIC 9 VALUE 3.
           05 E2 PIC 9 VALUE 1.
           05 E3 PIC 9 VALUE 4.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_MIN USING NUMS
       DISPLAY FN-MIN-RES
       PERFORM FN_MAX USING NUMS
       DISPLAY FN-MAX-RES
       STOP RUN.
